# ZenDNN

./: .gitattributes  .gitignore  CMakeLists.txt  CODEOWNERS  Config.cmake.in  Doxyfile  LICENCE  LICENSE  Makefile  README.binary.in  README.md  SECURITY.md  THIRD-PARTY-NOTICES  THIRD-PARTY-PROGRAMS
benchdnn/: CMakeLists.txt  README.md  benchdnn.cpp  benchdnn.hpp
benchdnn/doc/: embag.md  grp_matmul.md  matmul.md  normalization.md  perf_counters.md  reorder.md  sdpa.md
benchdnn/embag/: CMakeLists.txt  embag_benchdnn.cpp  embag_benchdnn.hpp  embag_lowoha.cpp  embag_lowoha.hpp  embag_tensor_factory.cpp  embag_tensor_factory.hpp  embag_utils.cpp  embag_utils.hpp
benchdnn/grp_matmul/: CMakeLists.txt  grp_matmul_benchdnn.cpp  grp_matmul_benchdnn.hpp  grp_matmul_utils.cpp  grp_matmul_utils.hpp
benchdnn/matmul/: CMakeLists.txt  matmul_benchdnn.cpp  matmul_benchdnn.hpp  matmul_lowoha.cpp  matmul_lowoha.hpp  matmul_parser.cpp  matmul_parser.hpp  matmul_tensor_factory.cpp  matmul_tensor_factory.hpp  matmul_utils.cpp  matmul_utils.hpp
benchdnn/normalization/: CMakeLists.txt  normalization_benchdnn.cpp  normalization_benchdnn.hpp  normalization_lowoha.cpp  normalization_lowoha.hpp  normalization_tensor_factory.cpp  normalization_tensor_factory.hpp  normalization_utils.cpp  normalization_utils.hpp
benchdnn/reorder/: CMakeLists.txt  reorder_benchdnn.cpp  reorder_benchdnn.hpp  reorder_lowoha.cpp  reorder_lowoha.hpp  reorder_parser.cpp  reorder_parser.hpp  reorder_tensor_factory.cpp  reorder_tensor_factory.hpp  reorder_utils.cpp  reorder_utils.hpp
benchdnn/sdpa/: CMakeLists.txt  sdpa_benchdnn.cpp  sdpa_benchdnn.hpp  sdpa_lowoha.cpp  sdpa_lowoha.hpp  sdpa_tensor_factory.cpp  sdpa_tensor_factory.hpp  sdpa_utils.cpp  sdpa_utils.hpp
benchdnn/utils/: CMakeLists.txt  benchdnn_utils.cpp  benchdnn_utils.hpp  perf_counters.cpp  perf_counters.hpp
docs/doxygen/: CMakeLists.txt  doxyfile.in  zendnnl_mainpage.dox
examples/: CMakeLists.txt  batchmatmul_example.cpp  batchmatmul_example.hpp  compare_op_example.cpp  compare_op_example.hpp  embedding_bag_example.cpp  embedding_bag_example.hpp  example_utils.cpp  example_utils.hpp  examples.cpp  examples.dox  lowoha_conv2d_example.cpp  lowoha_conv2d_example.hpp  lowoha_group_matmul_example.cpp  lowoha_group_matmul_example.hpp  lowoha_matmul_example.cpp  lowoha_matmul_example.hpp  lowoha_normalization_example.cpp  lowoha_normalization_example.hpp  lowoha_pooling_example.cpp  lowoha_pooling_example.hpp  lowoha_reorder_example.cpp  lowoha_reorder_example.hpp  lowoha_softmax_example.cpp  lowoha_softmax_example.hpp  matmul_example.cpp  matmul_example.hpp  reorder_example.cpp  reorder_example.hpp  sample_example.cpp  sample_example.hpp  sdpa_example.cpp  sdpa_example.hpp  tensor_example.cpp  tensor_example.hpp
gtests/: CMakeLists.txt  gtest_utils.cpp  gtest_utils.hpp  test_matmul.cpp
src/: CMakeLists.txt
src/common/: CMakeLists.txt  attention.cpp  attention_pd.hpp  batch_normalization.cpp  batch_normalization_pd.hpp  bfloat16.cpp  bfloat16.hpp  binary.cpp  binary_pd.hpp  bit_cast.hpp  blis_wrapper.cpp  blis_wrapper.hpp  broadcast_strategy.cpp  broadcast_strategy.hpp  c_types_map.hpp  cache_blob.hpp  cache_blob_id.cpp  cache_blob_id.hpp  cblas_with_blis_api.hpp  concat.cpp  concat_pd.hpp  convolution.cpp  convolution_pd.cpp  convolution_pd.hpp  counting_barrier.hpp  cpp_compat.hpp  deconvolution.cpp  deconvolution_pd.hpp  dynamic_module.cpp  dynamic_module.hpp  eltwise.cpp  eltwise_pd.hpp  embedding_bag.cpp  embedding_bag_pd.hpp  engine.cpp  engine.hpp  engine_id.hpp  error_status.hpp  experimental.cpp  experimental.hpp  (+142 more)
src/cpu/: CMakeLists.txt  README.md  avx2_embedding_bag.cpp  avx2_embedding_bag.hpp  avx2_embedding_bag_v2.cpp  avx2_embedding_bag_v2.hpp  avx512_embedding_bag.cpp  avx512_embedding_bag.hpp  avx512_embedding_bag_utils.hpp  bfloat16.cpp  binary_injector_utils.cpp  binary_injector_utils.hpp  cpu_attention_list.cpp  cpu_attention_pd.hpp  cpu_batch_normalization_list.cpp  cpu_batch_normalization_pd.hpp  cpu_batch_normalization_utils.cpp  cpu_batch_normalization_utils.hpp  cpu_binary_list.cpp  cpu_binary_pd.hpp  cpu_concat.cpp  cpu_concat_pd.hpp  cpu_convolution_list.cpp  cpu_convolution_pd.hpp  cpu_deconvolution_list.cpp  cpu_deconvolution_pd.hpp  cpu_eltwise_list.cpp  cpu_eltwise_pd.hpp  cpu_embedding_bag_list.cpp  cpu_embedding_bag_pd.hpp  cpu_engine.cpp  cpu_engine.hpp  cpu_inner_product_list.cpp  cpu_inner_product_pd.hpp  cpu_layer_normalization_list.cpp  cpu_layer_normalization_pd.hpp  cpu_lrn_list.cpp  cpu_lrn_pd.hpp  cpu_memory_storage.hpp  cpu_pooling_list.cpp  (+114 more)
src/memory/: CMakeLists.txt  tensor.cpp  tensor.hpp  tensor_options.cpp  tensor_options.hpp
src/operators/: CMakeLists.txt
tests/: CMakeLists.txt  CMakeLists.txt.org  zendnn_matmul_gelu_test.cpp
tests/api_tests/: CMakeLists.txt  cmd_parser.hpp  emd_bench.sh  input_sizes1x1.txt  input_sizes_resnet50.txt  other_utils.hpp  quant_utils.hpp  ref_avx_conv_param.cpp  test_utils.hpp  zendnn_avx_conv.cpp  zendnn_avx_conv_maxpool.cpp  zendnn_avx_conv_param.cpp  zendnn_avx_conv_param_direct.cpp  zendnn_avx_conv_param_direct_u8s8s32os8.cpp  zendnn_avx_conv_param_fusion.cpp  zendnn_avx_conv_primitive_cache_test.cpp  zendnn_avx_maxpool_blocked.cpp  zendnn_block_size.cpp  zendnn_conv_test.cpp  zendnn_embedding_bag_benchmark.cpp  zendnn_embedding_bag_test.cpp  zendnn_grp_embedding_bag_test.cpp  zendnn_grp_embedding_bag_test_int4.cpp  zendnn_grp_embedding_mlp_test.cpp  zendnn_grp_matmul_test.cpp  zendnn_lpgemm_layerwise.cpp  zendnn_lpgemm_layerwise_bf16.cpp  zendnn_lpgemm_layerwise_s32.cpp  zendnn_lpgemm_layerwise_s8s8s16os.cpp  zendnn_lpgemm_layerwise_s8s8s32_accuracy.cpp  zendnn_lpgemm_layerwise_s8s8s32os.cpp  zendnn_lpgemm_layerwise_u8s8s16ou8.cpp  zendnn_lpgemm_layerwise_u8s8s16ou8_accuracy.cpp  zendnn_lpgemm_layerwise_u8s8s32_accuracy.cpp  zendnn_lpgemm_network.cpp  zendnn_lpgemm_network_bf16.cpp  zendnn_lpgemm_network_s32.cpp  zendnn_lpgemm_network_s8s8s16os.cpp  zendnn_lpgemm_network_s8s8s32os.cpp  zendnn_matmulFusions_test.cpp  (+15 more)
zendnnl/: CMakeLists.txt
(+1539 files in other folders)
